--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,6 +16,7 @@ phases:
       - apt-get -y install python3.5 python3.5-dev jq
       - curl https://bootstrap.pypa.io/ez_setup.py -o - | python3.5
       - easy_install pip
+      - pip3 install --upgrade awscli
       - ln -sf /usr/bin/python3.5 /usr/local/bin/python3  
   pre_build:
     commands:
